[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnstat"
description = "A toolkit to track and analyze the status and statistics of neural network."
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
  "numpy", "scipy", "matplotlib", "seaborn"
]

[project.urls]
"Homepage" = "https://github.com/zhengzangw/nnstat"
